[package]
name = "iter-scanb"
version = "0.3.0"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["iterator", "no_std", "extension", "adapter", "scan"]
license = "MIT"
readme = "README.md"
description = "Extend Iterator::scan, but use B, instead of Option<B>"
repository = "https://github.com/A4-Tacks/iter-scanb-rs"

[features]
default = ["std"]
std = []

[dependencies]
